first commit.md

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <section id="faqs" class="faq section-bg">
             <div class="container justify-content-center text-center mb-5" data-aos="fade-up">
                 <h2 class="section-heading">Frequently Asked Questions</h2>
-                <p>Get to know more © 2024 Kentai Graphic and Ui/Ux Design. All Rights Reserved..</p>
+                <p>Get to know more Kentai Graphic and Ui/Ux Design.</p>
 
                 <button class="accordion">What is your design process like?<span class="material-symbols-outlined move-right">expand_more</span></button>
                 <div class="panel">
