--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <ul>
                                 
                                 <li>Are you tired of design projects that fall short of your vision? <br> Let's connect for a free, no-obligation consultation to discuss your design needs. I'll provide expert advice, tailored solutions, and real-time feedback to ensure your project exceeds your expectations.
-                                    Book your consultation today: &nbsp; <br> [Whatsapp; &nbsp; 07049412363 &nbsp; Email; &nbsp; fakowajokehinde777@gmail.com] <br>       
+                                    Book your consultation today: &nbsp; <br> [Whatsapp; &nbsp; <b style="color: black;" style="font-size: medium;">07049412363</b> &nbsp; Email; &nbsp; fakowajokehinde777@gmail.com] <br>       
                                     Let's create something truly remarkable together..</li>
                         </p>
                         <p><a href="https://personal-h1zi.onrender.com" download class="button medium primary">Visit My Portfolio</a></p>
